style.css
/**
 * Remove the margin in all browsers.
 */

body {
    margin: 0;
    background: #479AD1;
}

/**
 * Render the `main` element consistently in IE.
 */

main {
    display: block;
}


h1 {
    color: #0F2417;
    font-family: "Arial Black";
    text-align: center;
    font-family: 'Oswald', sans-serif;
    font-family: 'Playfair Display', serif;
    font-family: 'Roboto Slab', serif;
}

table {
    border-collapse: collapse;
    position: center;
}

#table {
    margin-left: auto;
    margin-right: auto;
}
table, th, td {
    border: 3px solid;
    border-color: #0C2231;
    font-family: 'Roboto Slab', serif;
    background-color: #E35F75;
    color: #0F2417;
}

th {
    height: 50px;
    text-align-all: left;
}

tr {
    align-content: center;
}

.column {
    float: left;
    width: 25%
    padding: 5px;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

#earth {
    max-width: 15%;
    max-height: 15%;
}

#mars {
    max-width: 15%;
    max-height: 15%;
}

#jupitar {
    max-width: 15%;
    max-height: 15%;
}

#neptune {
    max-width: 15%;
    max-height: 15%;
}

